--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="adSense.js"></script>
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
